--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,14 @@
     "contáctanos",
     "desinsectación",
     "desratización",
+    "Hachmaoui",
     "infestaciones",
     "LECTULARIUS",
+    "Maruan",
     "Ootecas",
     "Plagaland",
-    "postventa"
+    "postventa",
+    "rigth",
+    "whatsapp"
   ]
 }
