added new pages of politics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "Andalucía",
     "Contáctame",
     "contáctanos",
+    "Contácto",
     "desinsectación",
     "desratización",
     "Hachmaoui",
@@ -11,6 +12,7 @@
     "LECTULARIUS",
     "Maruan",
     "Ootecas",
+    "plagaland",
     "Plagaland",
     "postventa",
     "rigth",
