--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,21 @@
 {
   "cSpell.language": "en,es-ES",
   "cSpell.words": [
+    "AMBICASE",
+    "ambiplag",
     "Andalucía",
     "Contáctame",
     "contáctanos",
     "Contácto",
+    "desensamblaje",
     "desinsectación",
     "desratización",
     "Hachmaoui",
     "infestaciones",
     "LECTULARIUS",
+    "LOPDGDD",
     "Maruan",
+    "noreferrer",
     "Ootecas",
     "plagaland",
     "Plagaland",
