--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@formspree/react": "^2.4.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
-    "framer-motion": "^7.6.15",
+    "framer-motion": "7.6.15",
     "next": "13.0.4",
-    "pnpm": "^7.18.0",
+    "pnpm": "7.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "1.56.1",
